--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@nuxt/devtools": "latest",
     "@nuxt/types": "^2.17.2",
     "@nuxt/typescript-build": "^3.0.1",
+    "@nuxtjs/i18n": "^8.0.0-rc.5",
     "@types/node": "^20.9.0",
     "@types/vue": "^2.0.0",
     "nuxt": "^3.8.1",
@@ -26,6 +27,7 @@
   "dependencies": {
     "@mdi/font": "^7.3.67",
     "@vee-validate/nuxt": "^4.11.8",
+    "@vee-validate/rules": "^4.11.8",
     "@vee-validate/yup": "^4.11.8",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
