--- a/client/package.json
+++ b/client/package.json
@@ -18,11 +18,12 @@
     "@types/vue": "^2.0.0",
     "nuxt": "^3.8.1",
     "nuxt-icon": "^0.6.6",
+    "sass": "^1.69.5",
     "typescript": "^5.2.2",
     "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5",
-    "vuetify": "^3.4.1"
+    "vuetify": "^3.4.2"
   },
   "dependencies": {
     "@mdi/font": "^7.3.67",
@@ -33,6 +34,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-vue": "^2.23.1",
     "node-sass": "^9.0.0",
+    "vuex": "^4.1.0",
     "yup": "^1.3.2"
   }
 }
