--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,7 @@
     "@types/vue": "^2.0.0",
     "nuxt": "^3.8.1",
     "nuxt-icon": "^0.6.6",
-    "sass": "^1.69.5",
+    "sass": "^1.70.0",
     "typescript": "^5.2.2",
     "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.3.8",
@@ -27,13 +27,17 @@
   },
   "dependencies": {
     "@mdi/font": "^7.3.67",
+    "@nuxtjs/style-resources": "^1.2.2",
     "@vee-validate/nuxt": "^4.11.8",
     "@vee-validate/rules": "^4.11.8",
     "@vee-validate/yup": "^4.11.8",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "bootstrap-vue": "^2.23.1",
-    "node-sass": "^9.0.0",
+    "dart-sass": "^1.25.0",
+    "nuxt-swiper": "^1.2.2",
+    "sass-loader": "^14.0.0",
+    "url": "^0.11.3",
     "vuex": "^4.1.0",
     "yup": "^1.3.2"
   }
