--- a/client/package.json
+++ b/client/package.json
@@ -10,14 +10,14 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
+    "@nuxt/devtools": "^0.0.1",
     "@nuxt/types": "^2.17.2",
     "@nuxt/typescript-build": "^3.0.1",
     "@nuxtjs/i18n": "^8.0.0-rc.5",
     "@types/node": "^20.9.0",
     "@types/vue": "^2.0.0",
-    "nuxt": "^3.8.1",
-    "nuxt-icon": "^0.6.6",
+    "nuxt": "^3.9.3",
+    "nuxt-icon": "^0.6.2",
     "sass": "^1.70.0",
     "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.3.8",
