--- a/client/package.json
+++ b/client/package.json
@@ -15,16 +15,19 @@
     "@nuxt/typescript-build": "^3.0.1",
     "@nuxtjs/i18n": "^8.0.0-rc.5",
     "@types/node": "^20.9.0",
+    "@types/nprogress": "^0.2.3",
     "@types/vue": "^2.0.0",
     "nuxt": "^3.9.3",
     "nuxt-icon": "^0.6.2",
     "sass": "^1.70.0",
     "vite-plugin-vuetify": "^1.0.2",
-    "vue": "^3.3.8",
+    "vue": "3.4.8",
     "vue-router": "^4.2.5",
     "vuetify": "^3.4.2"
   },
   "dependencies": {
+    "@casl/ability": "^6.5.0",
+    "@casl/vue": "^2.2.1",
     "@mdi/font": "^7.3.67",
     "@nuxtjs/style-resources": "^1.2.2",
     "@vee-validate/nuxt": "^4.11.8",
@@ -34,6 +37,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-vue": "^2.23.1",
     "dart-sass": "^1.25.0",
+    "nprogress": "^0.2.0",
     "nuxt-swiper": "^1.2.2",
     "sass-loader": "^14.0.0",
     "url": "^0.11.3",
