--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@casl/ability": "^6.5.0",
     "@casl/vue": "^2.2.1",
+    "@ivanv/vue-collapse-transition": "^1.0.2",
     "@mdi/font": "^7.3.67",
     "@nuxtjs/style-resources": "^1.2.2",
     "@types/js-cookie": "^3.0.6",
