--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "@mdi/font": "^7.3.67",
     "@nuxtjs/style-resources": "^1.2.2",
     "@types/js-cookie": "^3.0.6",
+    "@vee-validate/i18n": "^4.12.5",
     "@vee-validate/nuxt": "^4.11.8",
     "@vee-validate/rules": "^4.11.8",
     "@vee-validate/yup": "^4.11.8",
