--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,23 @@
   "dependencies": {
     "@casl/ability": "^6.5.0",
     "@casl/vue": "^2.2.1",
+    "@ckeditor/ckeditor5-alignment": "^41.1.0",
+    "@ckeditor/ckeditor5-build-classic": "^41.1.0",
+    "@ckeditor/ckeditor5-document-outline": "^41.1.0",
+    "@ckeditor/ckeditor5-find-and-replace": "^41.1.0",
+    "@ckeditor/ckeditor5-font": "^41.1.0",
+    "@ckeditor/ckeditor5-horizontal-line": "^41.1.0",
+    "@ckeditor/ckeditor5-html-embed": "^41.1.0",
+    "@ckeditor/ckeditor5-import-word": "^41.1.0",
+    "@ckeditor/ckeditor5-paste-from-office": "^41.1.0",
+    "@ckeditor/ckeditor5-style": "^41.1.0",
+    "@ckeditor/ckeditor5-table": "^41.1.0",
+    "@ckeditor/ckeditor5-theme-lark": "^41.1.0",
+    "@ckeditor/ckeditor5-typing": "^41.1.0",
+    "@ckeditor/ckeditor5-ui": "^41.1.0",
+    "@ckeditor/ckeditor5-upload": "^41.1.0",
+    "@ckeditor/ckeditor5-vue": "^5.1.0",
+    "@ckeditor/vite-plugin-ckeditor5": "^0.1.3",
     "@ivanv/vue-collapse-transition": "^1.0.2",
     "@mdi/font": "^7.3.67",
     "@nuxtjs/style-resources": "^1.2.2",
