--- a/backend/composer.json
+++ b/backend/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1",
         "bensampo/laravel-enum": "^6.8",
         "guzzlehttp/guzzle": "^7.2",
+        "intervention/image": "^3.4",
         "laravel/framework": "^10.10",
         "laravel/passport": "^11.10",
         "laravel/sanctum": "^3.3",
