--- a/client/package.json
+++ b/client/package.json
@@ -63,6 +63,7 @@
     "nuxt-swiper": "^1.2.2",
     "sass-loader": "^14.0.0",
     "url": "^0.11.3",
+    "vue-draggable-next": "^2.2.1",
     "vuex": "^4.1.0",
     "yup": "^1.3.2"
   }
