--- a/backend/composer.json
+++ b/backend/composer.json
@@ -7,11 +7,12 @@
     "require": {
         "php": "^8.1",
         "bensampo/laravel-enum": "^6.8",
-        "guzzlehttp/guzzle": "^7.2",
+        "guzzlehttp/guzzle": "^7.8",
         "intervention/image": "^3.4",
         "laravel/framework": "^10.10",
         "laravel/passport": "^11.10",
         "laravel/sanctum": "^3.3",
+        "laravel/socialite": "^5.12",
         "laravel/tinker": "^2.8",
         "spatie/laravel-permission": "^6.3"
     },
