--- a/client/package.json
+++ b/client/package.json
@@ -61,6 +61,7 @@
     "js-cookie": "^3.0.5",
     "nprogress": "^0.2.0",
     "nuxt-swiper": "^1.2.2",
+    "nuxt-vue3-google-signin": "^0.0.10",
     "sass-loader": "^14.0.0",
     "url": "^0.11.3",
     "vue-draggable-next": "^2.2.1",
